--- a/style/style.css
+++ b/style/style.css
@@ -41,3 +41,20 @@ main .right img {
     text-align: center;
     text-transform: uppercase;
 }
+
+.column-heading {
+    font-size: 1.25rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin: 1rem 0;
+}
+
+.carousel-text {
+    color: black;
+}
+
+.carousel-caption {
+    width: 500px;
+    margin-left: 200px;
+    background-color: lightgrey;
+}
