--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,7 @@ main .left h3 {
     margin-top: 10px;
     font-weight: bold;
     font-size: 46px;
+    text-transform: uppercase;
 }
 
 main .left h3 span {
