--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@ body {
 
 main {
     background-color: #deebee;
+    margin-top: 56px;
     padding: 90px 85px;
     display: flex;
     align-items: center;
